Implementing the select method to make test pass - GREEN

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" value="IE=edge" />
 		<title>Jasmine / Backbone demo</title>
+		<style>.selected { background-color: orange; }</style>
 	</head>
 	<body>
 		<h1>Animaux :</h1>
